[gd_scene load_steps=8 format=3 uid="uid://bfqph1j5fipce"]

[ext_resource type="Script" path="res://scenes/menus/menuElement.gd" id="1_x3ruo"]
[ext_resource type="FontFile" uid="uid://b8uw3x24khlrf" path="res://assets/old_london/OldLondon.ttf" id="2_5clt8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sftwu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3bvp3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3k4lm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlkvs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltia5"]

[node name="menuElement" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -55.0
offset_right = 74.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3ruo")
exportText = "PlaceholderText"

[node name="button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -134.0
offset_right = 77.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_sftwu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3bvp3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3k4lm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nlkvs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ltia5")

[node name="buttonLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5clt8")
theme_override_font_sizes/font_size = 30
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
